# llmlinks

./: .bumpversion.cfg  .gitignore  Makefile  pyproject.toml
.devcontainer/: dev.Dockerfile  devcontainer.json  docker-compose.yaml
example/: 0_link.ipynb  1_compile.ipynb  2_ai-scientist.ipynb  compile.ipynb  demo2.ipynb
llmlinks/: compiler.py  function.py  link.py  llm_client.py
llmlinks/llm/: google_model.py  openai_model.py
src/: function.py
src/llm/: __init__.py  chatgpt.py
